@@ -15,8 +15,16 @@ public class Example {
 
     public static void main(String[] args) throws IOException {
 
+
+    }
+
+}
+
+class Task1{
+
+    public static void main(String[] args) throws IOException {
         // 3.1
-        File docsDir = new File("uploaded/docs");
+        File docsDir = new File("uploaded/docs/Task1");
         docsDir.mkdirs();
 
         Scanner scanner = new Scanner(System.in);
@@ -48,10 +56,16 @@ public class Example {
                 System.out.println("Найден файл: " + file.getName());
             }
         }
+    }
+}
 
+class Task2_3{
+
+    public static void main(String[] args) throws IOException {
+        Scanner scanner = new Scanner(System.in);
         // 3.2
-        File usersFile = new File("users.txt");
-       System.out.print("Введите имена через пробел: ");
+        File usersFile = new File("uploaded/docs/Task2","users.txt");
+        System.out.print("Введите имена через пробел: ");
         String names = scanner.nextLine();
         Files.writeString(usersFile.toPath(), names);
 
@@ -59,37 +73,62 @@ public class Example {
         String users = Files.readString(usersFile.toPath());
         String[] namesArray = users.split(" ");
         System.out.println(Arrays.toString(namesArray));
+    }
 
+}
+
+class Task4{
+    public static void main(String[] args) throws IOException {
         // 3.4
-        File file1 = new File("file1.txt");
-        Files.write(file1.toPath(), "Roman".getBytes());
-        File file2 = new File("file2.txt");
-        Files.write(file1.toPath(), "Roman".getBytes());
+
+        File dir = new File("uploaded/docs/Task4");
+        dir.mkdirs();
+        String exampleText = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip";
+        File file1 = new File("uploaded/docs/Task4","file1.txt");
+        Files.write(file1.toPath(), exampleText.getBytes());
+        System.out.println(Files.readString(file1.toPath()));
+        File file2 = new File("uploaded/docs/Task4","file2.txt");
         Files.copy(file1.toPath(), file2.toPath());
 
         boolean equal = Arrays.equals(Files.readAllBytes(file1.toPath()),
                 Files.readAllBytes(file2.toPath()));
         System.out.println("Файлы " + (equal ? "равны" : "не равны"));
 
-        // 3.5
-        File tempDir = new File("temp");
-        tempDir.mkdir();
-        File[] tempFiles = tempDir.listFiles();
-        for (File f : tempFiles) {
-            Files.delete(f.toPath());
-            System.out.println("Удален файл " + f.getName());
+    }
+}
+
+class Task5{
+
+    public static void removeDir(File dir) {
+        if (dir.isDirectory()) {
+            File[] files = dir.listFiles();
+            if (files != null) {
+                for (File f : files) {
+                    removeDir(f);
+                    System.out.println("Удален файл " + f.getName());
+                }
+            }
         }
+        dir.delete();
+    }
+    public static void main(String[] args) throws IOException {
+        // 3.5
+        File tempDir = new File("uploaded/docs/");
+        removeDir(tempDir);
+    }
+}
+
+class Task6{
+    public static void main(String[] args) {
 
         // 3.6
         String ext = ".txt";
-        File folder = new File(".");
+        File folder = new File("uploaded/docs/Task4");
         File[] found = folder.listFiles(new FilenameFilter() {
             public boolean accept(File dir, String name) {
                 return name.endsWith(ext);
             }
         });
         System.out.println(Arrays.toString(found));
-
     }
-
 }
